Fix spacing with featured card component.

--- a/client/my-sites/plans/jetpack-plans/product-store/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/style.scss
@@ -110,8 +110,7 @@
 		list-style-type: none;
 		display: grid;
 		grid-template-columns: 1fr;
-		gap: 32px;
-		margin-top: 24px;
+		grid-gap: 24px;
 
 		@include break-medium {
 			grid-template-columns: 1fr 1fr;
